src/core/Claroline/CoreBundle/Tests/Stub/plugin/Invalid/InvalidAsyncValue/InvalidInvalidAsyncValue.php
<?php

namespace Invalid\InvalidAsyncValue;

use Claroline\CoreBundle\Library\PluginBundle;

class InvalidInvalidAsyncValue extends PluginBundle
{
}